@@ -455,7 +455,7 @@
           __asm__ __volatile__ (       \
             "wr %%g0,%%g0,%%y\n\t"     \
             "udiv %2,%3,%0\n\t"        \
-            "umul %0,%3,%1"            \
+            "umul %0,%3,%1\n\t"        \
             "sub %2,%1,%1"             \
             : "=&r" (__q), "=&r" (__r) \
             : "r" (__x), "r" (__y));   \
@@ -583,7 +583,7 @@
         __asm__ __volatile__ (       \
           "wr %%g0,%%g0,%%y\n\t"     \
           "udiv %2,%3,%0\n\t"        \
-          "umul %0,%3,%1"            \
+          "umul %0,%3,%1\n\t"        \
           "sub %2,%1,%1"             \
           : "=&r" (__q), "=&r" (__r) \
           : "r" (__x), "r" (__y));   \
@@ -664,7 +664,7 @@
         __asm__ __volatile__ (       \
           "wr %%g0,%%g0,%%y\n\t"     \
           "udiv %2,%3,%0\n\t"        \
-          "umul %0,%3,%1"            \
+          "umul %0,%3,%1\n\t"        \
           "sub %2,%1,%1"             \
           : "=&r" (__q), "=&r" (__r) \
           : "r" (__x), "r" (__y));   \
@@ -805,7 +805,7 @@
           __asm__ __volatile__ (       \
             "wr %2,%%g0,%%y\n\t"       \
             "udiv %3,%4,%0\n\t"        \
-            "umul %0,%4,%1"            \
+            "umul %0,%4,%1\n\t"        \
             "sub %3,%1,%1"             \
             : "=&r" (__q), "=&r" (__r) \
             : "r" (__xhi), "r" (__xlo), "r" (__y)); \
